--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="utf-8">
+  <title>Mensch ärgere dich nicht</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="styles.css" media="screen"/>
+</head>
+
+<body>
 <h1>Mensch ärgere dich nicht</h1>
 <p>Hier soll später unsere Studienarbeit erscheinen.</p>
+</body>
+</html>
